syntax = "proto3";

package scow_notification;

import "google/protobuf/struct.proto";
import "protos/message_common.proto";

message SenderInfo {
  optional SenderType sender_type = 1;
  string sender_id = 2;
}

message UserInfo {
  string user_id = 2;
  optional string email = 3;
  optional string name = 4;
}

message TargetInfo {
  optional TargetType target_type = 1;
  //  如果 target_type 为 FULL_SITE 时可以不传
  optional UserInfo user_info = 2;
}

message MessageTypeInfo {
  string type = 1;
  string category = 2;
}

message MessageInfo {
  google.protobuf.Struct metadata = 1;
  string title = 2;
  string content = 3;
}

message BridgeMessage {
  SenderInfo sender_info = 1;
  MessageTypeInfo message_type_info = 2;
  TargetInfo target_info = 3;
  MessageInfo message_info = 4;
  repeated NoticeType notice_types = 5;
}

message SendMessageRequest {
  SenderInfo sender_info = 1;
  MessageTypeInfo message_type_info = 2;
  TargetInfo target_info = 3;
  MessageInfo message_info = 4;
  repeated NoticeType notice_types = 5;
}

message SendMessageResponse {
  repeated BridgeMessage messages = 1;
}

message BatchSendMessagesRequest {

}

message BatchSendMessagesResponse {
}


service MessageBridgeService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc BatchSendMessages(BatchSendMessagesRequest) returns (BatchSendMessagesResponse);
}
